fix: increase fls-tl-wrap padding-bottom so j descender is not clipped

--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -2647,7 +2647,7 @@ button.smaken-allergen-link {
   display: block;
   overflow: hidden;
   line-height: 1.05;
-  padding-bottom: 0.12em;
+  padding-bottom: 0.28em;
 }
 .fls-tl {
   display: block;
